added rewards node and api gb direct

--- a/app/src/main/res/layout/detail_com_footer.xml
+++ b/app/src/main/res/layout/detail_com_footer.xml
@@ -32,7 +32,30 @@
                 android:text="$0.00"
                 android:textStyle="bold" />
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/reward_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:orientation="horizontal">
 
+        <TextView
+            style="@style/normal_text_14"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="@string/rewards"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/rewards"
+            style="@style/normal_text_14"
+            android:layout_width="match_parent"
+            android:layout_weight="3"
+            android:gravity="right"
+            android:text="@string/applied"
+            android:textStyle="bold" />
+    </LinearLayout>
     <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
