--- a/app/src/main/res/layout/detail_footer.xml
+++ b/app/src/main/res/layout/detail_footer.xml
@@ -36,6 +36,7 @@
         android:id="@+id/reward_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:orientation="horizontal">
 
         <TextView
