--- a/app/src/main/res/layout/content_setting.xml
+++ b/app/src/main/res/layout/content_setting.xml
@@ -16,6 +16,14 @@
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/closed_status_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/sp_size_22"
+            android:textColor="@color/colorPrimaryDark_one"
+            android:textStyle="bold"/>
+
         <Button
                 android:id="@+id/stop_open_button"
                 android:layout_width="wrap_content"
