--- a/app/src/main/res/layout/content_home_detail.xml
+++ b/app/src/main/res/layout/content_home_detail.xml
@@ -76,7 +76,12 @@
                 android:layout_marginTop="@dimen/dimen_10"
                 android:textColor="@color/white"
                 android:id="@+id/order_time_text"/>
-
+        <TextView style="@style/normal_text_12"
+            android:id="@+id/track_order_text"
+            android:visibility="gone"
+            android:text="@string/track_order"
+            android:layout_marginTop="@dimen/dimen_10"
+            android:textColor="@color/blue_color"/>
         <LinearLayout android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_30"
                 android:orientation="vertical"
@@ -96,8 +101,7 @@
                         android:id="@+id/order_id_text"
                         android:textStyle="bold"
                         android:textIsSelectable="true"
-                        android:layout_gravity="left|center_vertical"
-                        android:text="GB11123238769321"/>
+                        android:layout_gravity="left|center_vertical"/>
                 <TextView android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
