--- a/app/src/main/res/layout/detail_home_footer.xml
+++ b/app/src/main/res/layout/detail_home_footer.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimen_10"
         android:gravity="right"
@@ -247,5 +248,30 @@
 
         </LinearLayout>
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/note_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="left"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:orientation="vertical"
+        tools:ignore="RtlHardcoded">
 
+        <TextView
+            style="@style/normal_text_16"
+            android:layout_width="@dimen/dimen_100"
+            android:layout_height="@dimen/dimen_30"
+            android:gravity="left"
+            android:text="Note:- "
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/note_details_text"
+            style="@style/normal_text_14"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/dimen_5"
+            android:textStyle="normal" />
+
+    </LinearLayout>
 </LinearLayout>
